fix spacing and noAntrean field

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1956,6 +1956,7 @@ body {
     border: 1px solid rgba(0, 0, 0, .2);
     border-radius: 15px;
     box-shadow: 0px 10px 16px 0px rgb(0 0 0 / 10%);
+    width: 100%;
 }
 
 .keterangan-loket-riwayat {
@@ -3561,5 +3562,10 @@ hr.rounded {
 
     .keterangan-loket-riwayat p span {
         font-size: 1rem;
+    }
+
+    .nomor-antrian-mu {
+        padding-left: 4.5%;
+        padding-right: 4.5%;
     }
 }
